# zero2prod

./: Cargo.toml  Dockerfile  README.md  api.http
.github/workflows/: general.yaml
.sqlx/: query-0c8c72b47ce0b25dbed64f46b9687f2600083d0bd8576f691cff0531a491fa12.json  query-28011e8920947b758a16018ad1dc274b45d8ba04720d3635ebc9b1d60a7e6860.json  query-382e8006c2085460dbfe77d31b2f0f2e1b8f7b50ff47f4319330e067465061b1.json  query-555549515a6cd65c2cfa40b563ee60202cdd0631d314a551723c5b108699b141.json  query-75337269fb5f4f5d9ecfb5c2caf884e4673c6f14c369989cf8025b19eaca4ba2.json  query-7d0ba97e8d40012d2fa6f72a875f3bf32e57ffd18affb5764e58f76157f33817.json  query-80e190f42fe604bc531586fb2c190ae24f6888f1f63a1340280ecac0c1d528b1.json  query-b0abcefeb64db52be87f28ef053d28f7c7b5707431219007f354c563811c81d6.json  query-d339ffaad3856d9fc62bbbdb46b1f172bef99b14449751d924ecf8e967dcb0d1.json
migrations/: 20241125054102_make_status_not_null_in_subscriptions.sql  20250110082106_seed_user.sql  20250116064831_create_idempotency_table.sql  20250118085041_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: helpers.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  helpers.rs  (+8 more)
(+11 files in other folders)
