[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1" , features = ["derive"]}
config = "0.14"
uuid = { version = "1" , features = ["v4"] }
chrono = { version = "0.4.22" , default-features = false , features = ["clock"] }
tracing = { version = "0.1" , features = ["log"] }
tracing-subscriber = { version = "0.3" , features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8" , features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1"
validator = "0.18"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.22"
argon2 = { version = "0.5" , features = ["std"] }
urlencoding = "2"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7"
fake = "2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1"
tokio = { version = "1" , features = [ "rt" , "macros" ] }
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"
